# controllers/mainControllers.js
@@ -1,8 +1,78 @@
 const chatsSchema = require("../models/message_schema");
 const userSchema = require("../models/user_schemas");
 
+const addUnreadMessage = async (req, res) => {
+  const { message } = req.body;
+  const { user2ID } = req.params;
+  // firstly check if the user2 already has an entry of unread mesaages from current user
+  try {
+    const user = await userSchema.findOne(
+      {
+        _id: user2ID,
+        "unread_messages.sender_ID": req.user.userID,
+      },
+      { token: 0, password: 0 }
+    );
+    //if so, add to the list of unread messages
+    if (user) {
+      const unread_entries = user.unread_messages;
+      const updated_entries = unread_entries.map((entry) => {
+        if (entry.sender_ID == req.user.userID) {
+          // i used == because the === was being too imperative, it's not finding it though it is there
+          entry.messages.push({ text: message });
+          return entry;
+        }
+      });
+      user.set({
+        unread_messages: updated_entries,
+      });
+      await user.save();
+      return res.status(200).json({
+        message: "notification sent, exiting entry found",
+      });
+      // user2 doesnt not have an entry already the user variable set earlier would be null, so create an entry
+    } else if (user === null) {
+      await userSchema.findOneAndUpdate(
+        { _id: user2ID },
+        {
+          unread_messages: [
+            {
+              sender_ID: req.user.userID,
+              sender_username: req.user.username,
+              messages: [{ text: message }],
+            },
+          ],
+        }
+      );
+      return res.status(200).json({ message: "notification sent, new entry" });
+    } else {
+      return res.status(400).json({ message: "entry not found" });
+    }
+  } catch (err) {
+    res.status(500).json(err);
+    return;
+  }
+};
+// unread_messages ; [ {sender_id,sender_username, message:}, {}]
+
+const getCurrentUser = async (req, res) => {
+  try {
+    const user = await userSchema.findOne(
+      {
+        _id: req.user.userID,
+      },
+      { token: 0, password: 0 }
+    );
+    user && res.status(200).json({ currentUser: user });
+    return;
+  } catch (err) {
+    res.status(500).json(err);
+    return;
+  }
+};
+
 const getUsers = async (req, res) => {
-  // return every usr except the one logged in
+  // return one user
   const { userID } = req.query;
   if (userID) {
     try {
@@ -12,7 +82,6 @@ const getUsers = async (req, res) => {
         },
         { token: 0 }
       );
-
       oneUser && res.status(200).json({ user: oneUser });
       return;
     } catch (err) {
@@ -20,6 +89,7 @@ const getUsers = async (req, res) => {
       return;
     }
   }
+  // return every user except the one logged in
   const allUsers = await userSchema.find(
     {
       username: {
@@ -105,8 +175,10 @@ const updatedProfile = async (req, res) => {
   }
 };
 module.exports = {
+  getCurrentUser,
   getUsers,
   getOurChats,
   sendMessage,
   updatedProfile,
+  addUnreadMessage,
 };
