# routes/chatsRoutes.js
@@ -6,11 +6,15 @@ const {
   getOurChats,
   sendMessage,
   updatedProfile,
+  getCurrentUser,
+  addUnreadMessage,
 } = require("../controllers/mainControllers");
 
+chatsRouter.get("/getcurrentuser", getCurrentUser);
 chatsRouter.get("/", getUsers);
 chatsRouter.get("/:user2ID", getOurChats);
 chatsRouter.post("/sendmessage", sendMessage);
+chatsRouter.post("/addunreadmessage/:user2ID", addUnreadMessage);
 chatsRouter.patch("/updateprofile", updatedProfile);
 
 module.exports = chatsRouter;
